cocoa: make javascript dialog text selectable

This change:
1) Makes javascript dialog title and message selectable;
2) Moves the attributes of the title and message onto the NSTextField{,Cell} as
   appropriate instead of the NSAttributedString, because otherwise selecting
   the text reverts the string attributes (!).

Bug: 722217
Change-Id: I281187e2b1c14e80d0b346401b7caf41b1cc4326
Reviewed-on: https://chromium-review.googlesource.com/714036
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508112}
Former-commit-id: e9d5e38c448579d1b61ce10fd9dd204ddecb6148